Minor content update

--- a/resume.tex
+++ b/resume.tex
@@ -46,8 +46,8 @@
                 \item Currently leading the Percona Portal team: mentoring and
                     coaching junior developers, encouraging them to embrace
                     modern practices and techniques, such as TDD and Continuous
-                    Deployment, in order to provide high code quality and
-                    software quality.
+                    Deployment, in order to provide high code quality and,
+                    consequently, higher software quality.
                 \item Fostering the adoption of the Empowered Product Teams
                     model within the team and the rest of the company, liaising
                     with the Product Manager and the Product Designer to
