--- a/resume.tex
+++ b/resume.tex
@@ -204,7 +204,7 @@
     \skills{Frameworks and Libraries}%
         {Flask, Node.js, Express, Phoenix, Vue.js, React, React Native, Svelte,
             Redux, Web Components, Celery, NLTK, NumPy, pandas, Matplotlib,
-            D3.js;\\%
+            D3.js, Storybook;\\%
             front end workflow: task runners, package managers, webpack,
             etc.;\\%
             testing: py.test, tox, Jest, et al.; end2end testing.}
@@ -225,6 +225,7 @@
     \skills{Development Methodologies}%
         {Scrum, Kanban, XP, TDD/BDD, DDD, design patterns, CI/CD, CQRS, Event
             Sourcing, Evolutionary Architectures;\\%
+            Web apps: Atomic Design, Progressive Web Apps (PWAs);\\%
             CSS: BEM, SMACSS.}
 
     \skills{DevOps/Cloud}%
@@ -236,6 +237,10 @@
     \skills{Operating Systems and Networking}%
         {GNU/Linux and *BSD system administration and networking;\\%
             Knowledge of the ISO/OSI stack and networking RFCs.}
+
+    \skills{Product Management and Design Tools}%
+        {InVision, Figma, Sketch, Canva, Balsamiq, Zeplin, Miro, Jira, Trello,
+            Confluence.}
 \end{skillssection}
 
 \end{document}
