Update professional experience

--- a/resume.tex
+++ b/resume.tex
@@ -37,18 +37,37 @@
 \section{Professional Experience}
 
 \begin{cvsection}
-    \activity{Technical Team Lead}%
-        {Percona, LLC}%
-        {Apr. 2021}{Present}%
+    \activity{Contractor}%
+        {}%
+        {May 2023}{Present}%
         {Remote}%
         {%
             \begin{itemize}
-                \item Currently leading the Percona Portal team: mentoring and
-                    coaching junior developers, encouraging them to embrace
-                    modern practices and techniques, such as TDD and Continuous
+                \item Worked with several clients on web back end, front end
+                    and infrastracture with several technologies, such as
+                    Python, Go, Elixir, React, Svelte (SvelteKit), Next.js,
+                    Remix, Terraform, Kubernetes.
+                \item Supported data engineers on developing AI models (based
+                    on GPT or self-hosted LLaMA) and helped them integrate
+                    their solutions in the final products.
+                \item Created cost-effective cloud solutions to host clients'
+                    products using several cloud vendors (mostly AWS and GCP)
+                    and bare metal providers.
+            \end{itemize}
+        }
+
+    \activity{Technical Team Lead}%
+        {Percona, LLC}%
+        {Apr. 2021}{May 2023}%
+        {Remote}%
+        {%
+            \begin{itemize}
+                \item Led the Percona Portal team: mentoring and coaching
+                    junior developers, encouraging them to embrace modern
+                    practices and techniques, such as TDD and Continuous
                     Deployment, in order to provide high code quality and,
                     consequently, higher software quality.
-                \item Fostering the adoption of the Empowered Product Teams
+                \item Fostered the adoption of the Empowered Product Teams
                     model within the team and the rest of the company, liaising
                     with the Product Manager and the Product Designer to
                     study solution feasibility, while contributing to the
